# fastapi_example

./: .flake8  .gitignore  Makefile  pyproject.toml
src/campaign/: application.py  configuration.py  main.py
src/campaign/controllers/campaign/: __init__.py  campaign.py
src/campaign/dal/: base_model.py
src/campaign/dal/models/: activation.py  campaign.py
src/campaign/dal/repositories/: campaign.py
src/campaign/domain/campaign/: service.py
src/common/auth/: auth.py
src/common/context/: context.py
src/common/database/: __init__.py  base_model.py  configuration.py  middleware.py
src/common/health_checks/: health_check.py
src/common/logger/: logger.py
src/common/validators/: path.py
